fix overflow and build

--- a/src/js/components/stroke.styl
+++ b/src/js/components/stroke.styl
@@ -2,5 +2,5 @@
     display: flex;
     // justify-content: center;
     align-items: center;
-    overflow: scroll;
+    // overflow: scroll;
 }
